correcoes no endPoint cliente.
